--- a/Content Management Website/Back-End/CMS/src/main/resources/application.properties
+++ b/Content Management Website/Back-End/CMS/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8181
-
 
 #db.driver: com.mysql.jdbc.Driver
 #db.url: jdbc:mysql://localhost:3306/cms?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=true
@@ -14,3 +12,9 @@ spring.datasource.password=manager
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+
+
+SECRET_KEY = TNfksawo?1#rerfd323;2.34jfodw[w34kdjakncxma.wq/k4orefod,3[2'31'
+EXP_TIMEOUT = 86400000
+
+
