--- a/E-commerce Website/Front-End/indiantrait/package.json
+++ b/E-commerce Website/Front-End/indiantrait/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0"
   }
 }
